# testmaya3

./: .gitignore  analysis_output.txt  convert_queries.sh  deploy.sh  deploy.sh   detailed_info.txt  docker-compose.yml  info.txt  init.sql  touch
backend/: .env.example  Cargo.toml  Dockerfile  business_migration_text.sql  business_tables_migration.sql  create_test_hotel.sh  docker-entrypoint.sh  package.json  seed.sql
backend/.sqlx/: query-0233bf9e055d2effff5c386113f1f226e4750b8d6138245267853d2fba6cf06b.json  query-042930f7e62673a1f8d950586ff310d726348bde659a817658ded1cbf6190684.json  query-049c55fb0fb718ac36781a2cf2153ce112a4660d962a857fd03114861709a76d.json  query-12fd5a1d64dbbadb68249f80f9c5b6a9e1cb9e5b35952a6544dc666b65008cd7.json  query-147c4224e115689a4f621c99da3c14bc89cc5cb64d89689d3ec37317e24597ba.json  query-1d22fbd48fbd27b9d4dca430b6c227385c6c4d48fb7a2c6b5cb9f96fb85cf581.json  query-1fde6b304b9ea96e7be4ed51706829442c9ff8ba8389dcfa1a4473048e939a87.json  query-20cd1d98e77f00b60aef1b403bf1c13454929487bbe63f89d58a3a0b1b178304.json  query-25e7049bc53b596960ddadce2f52848d82b75a7bb9f39e4deb94e23a4ebfc18c.json  query-27faa866b178d9385fe383bac610a961572e8eb8ab1c07e7962402ef1cf5a780.json  query-3b7cbb4bc78fdd05e9f0bf15bff3cf909295bdc4ee3b9bfa6e8c3f7a3e5a9662.json  query-46eaa27c14378bfaca5f751dd8b8eec1f12522712d58d8283034b7371cd0e11c.json  query-4bb3788e1b9c70a1db50b32273f4d58392fed403dafa01ec1690cf265a6dc911.json  query-5bf07a358b7c154212a8fe891724945bcb4486c9d4165cf198ca3251bfdab89c.json  query-5f2fec8b534f22bbb7e4b7c0909610a88bcbf32627a71571b9f73db80edaa2a3.json  query-694e7d0408c2710093aaa281143811f6c3737287c2dff4d28594227667ff1470.json  query-6e4457392996329ffb8ff5e88d854b9a3096306461ca86a60570734e7ca91b5f.json  query-7a05f7f12affc64c920e5a2ff447e49bd699dba9298a4b42d450e5eec4363da1.json  query-7acd0cb9dda76240048bb5bf0f164a6621a93699e8f8be76d5b3d1868783a721.json  query-87b39e8f96f0879d0cdc82137a34b281ca005f035b258ef7bef128b33338fba5.json  query-97524b9de46d42605b567f40739039c336db88a74df165593ac81c86142dbe78.json  query-a24cc85f373b37db3bb0d260a2cd1be6ee1cbab10c2be57eda4d1323432588e0.json  query-a41670ebbe5b7f890b24ee0ef85aed3c9ce899c305050958800aaa3dde85af84.json  query-a60fc9a8a67ebfa5692e82b7148bea67a6275f539cb9233fbe8208ef5a1bbbb3.json  query-abdde5067895fca4f431869ea42bac7919fa597df525d6b0bfc7d1985d220e26.json  query-b07364373edeb4c9c716edab3c62130603d337ea5d78ae1e12ee4b8bc180d9ad.json  query-bc17d5833b4c1fa987751fa0881787578201c8e3373c07e951d1404720e94d1b.json  query-d3e0dd43b834c1fbb6bf477aa1483f9a255ecf12634a1c469b94730d7a1edd1d.json  (+3 more)
backend/src/: lib.rs  main.rs  models.rs  (+1 more)
(+64 files in other folders)
