[package]
name = "maya-digital-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.14"
jsonwebtoken = "9.2"
dotenv = "0.15"
env_logger = "0.10"
validator = { version = "0.18", features = ["derive"] }
bigdecimal = { version = "0.4", features = ["serde"] }
rand = "0.8"
futures-util = "0.3"
futures = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenvy = "0.15.7"
thiserror = "2.0.16"

[[bin]]
name = "maya-digital-backend"
path = "src/main.rs"
