[package]
name = "maya-digital-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-web = "4.5.1"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"  # Cambiado de dotenv a dotenvy
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "json", "uuid", "bigdecimal" ] }
validator = { version = "0.16", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }